--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/countrySelectFragment"
-        android:name="ru.practicum.android.diploma.util.temp_package_for_screen.fragments.CountrySelectFragment"
+        android:name="ru.practicum.android.diploma.presentation.filtering.workplace.fragment.CountrySelectFragment"
         android:label="fragment_country_select"
-        tools:layout="@layout/fragment_country_select" />
+         />
     <fragment
         android:id="@+id/favoriteFragment"
-        android:name="ru.practicum.android.diploma.util.temp_package_for_screen.fragments.FavoriteFragment"
+        android:name="ru.practicum.android.diploma.presentation.favourites.fragment.FavoriteFragment"
         android:label="fragment_favorite"
-        tools:layout="@layout/fragment_favorite" />
+        />
     <fragment
         android:id="@+id/filterFragment"
-        android:name="ru.practicum.android.diploma.util.temp_package_for_screen.fragments.FilterFragment"
+        android:name="ru.practicum.android.diploma.presentation.filtering.filter.fragment.FilterFragment"
         android:label="fragment_filter"
-        tools:layout="@layout/fragment_filter" >
+        >
         <action
             android:id="@+id/action_filterFragment_to_workPlaceSelectFragment"
             app:destination="@id/workPlaceSelectFragment" />
@@ -29,14 +29,14 @@
     </fragment>
     <fragment
         android:id="@+id/regionSelectFragment"
-        android:name="ru.practicum.android.diploma.util.temp_package_for_screen.fragments.RegionSelectFragment"
+        android:name="ru.practicum.android.diploma.presentation.filtering.workplace.fragment.RegionSelectFragment"
         android:label="fragment_region_select"
-        tools:layout="@layout/fragment_region_select" />
+        />
     <fragment
         android:id="@+id/searchFragment"
-        android:name="ru.practicum.android.diploma.util.temp_package_for_screen.fragments.SearchFragment"
+        android:name="ru.practicum.android.diploma.presentation.search.fragment.SearchFragment"
         android:label="fragment_search"
-        tools:layout="@layout/fragment_search" >
+        >
         <action
             android:id="@+id/action_searchFragment_to_vacancyDetailFragment"
             app:destination="@id/vacancyDetailFragment" />
@@ -52,19 +52,19 @@
     </fragment>
     <fragment
         android:id="@+id/teamFragment"
-        android:name="ru.practicum.android.diploma.util.temp_package_for_screen.fragments.TeamFragment"
+        android:name="ru.practicum.android.diploma.presentation.team.fragment.TeamFragment"
         android:label="fragment_team"
-        tools:layout="@layout/fragment_team" />
+        />
     <fragment
         android:id="@+id/vacancyDetailFragment"
-        android:name="ru.practicum.android.diploma.util.temp_package_for_screen.fragments.VacancyDetailFragment"
+        android:name="ru.practicum.android.diploma.presentation.vacancy.fragment.VacancyDetailFragment"
         android:label="fragment_vacancy_detail"
-        tools:layout="@layout/fragment_vacancy_detail" />
+        />
     <fragment
         android:id="@+id/workPlaceSelectFragment"
-        android:name="ru.practicum.android.diploma.util.temp_package_for_screen.fragments.WorkPlaceSelectFragment"
+        android:name="ru.practicum.android.diploma.presentation.filtering.workplace.fragment.WorkPlaceSelectFragment"
         android:label="fragment_work_place_select"
-        tools:layout="@layout/fragment_work_place_select" >
+        >
         <action
             android:id="@+id/action_workPlaceSelectFragment_to_regionSelectFragment"
             app:destination="@id/regionSelectFragment" />
@@ -74,7 +74,7 @@
     </fragment>
     <fragment
         android:id="@+id/industrySelectFragment2"
-        android:name="ru.practicum.android.diploma.util.temp_package_for_screen.fragments.IndustrySelectFragment"
+        android:name="ru.practicum.android.diploma.presentation.filtering.industry.fragment.IndustrySelectFragment"
         android:label="fragment_industry_select"
-        tools:layout="@layout/fragment_industry_select" />
+        />
 </navigation>
