--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,34 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-
     >
-
-
     <item
         android:id="@+id/searchFragment"
-        android:icon="@drawable/ic_search_19"
-        android:title="@string/search"
-
+        android:icon="@drawable/ic_main_24px"
+        android:title="@string/main"
         />
 
 
     <item
-        android:id="@+id/mediaFragment"
-        android:icon="@drawable/ic_mainmedia_20"
-        android:title="@string/media_name"
-
-
+        android:id="@+id/favoriteFragment"
+        android:icon="@drawable/ic_favorites_24px"
+        android:title="@string/favorite"
         />
 
 
     <item
-        android:id="@+id/settingsFragment"
-        android:icon="@drawable/ic_settings_20"
-        android:title="@string/settings_name"
-
-
+        android:id="@+id/teamFragment"
+        android:icon="@drawable/ic_team_24px"
+        android:title="@string/favorite"
         />
 
 
