--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary_background">#FDFDFD</color>
+    <color name="checked_color">#3772E7</color>
+    <color name="un_checked_color">#AEAFB4</color>
 </resources>
