--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -19,7 +19,7 @@
     <item
         android:id="@+id/teamFragment"
         android:icon="@drawable/ic_team_24px"
-        android:title="@string/favorite"
+        android:title="@string/team"
         />
 
 
